Improve search path filter performance